vlib/v/checker/tests/noreturn_with_return.out
vlib/v/checker/tests/noreturn_with_return.vv:2:1: error: [noreturn] functions cannot use return statements
    1 | [noreturn]
    2 | fn another() {
      | ~~~~~~~~~~~~
    3 |     eprintln(@FN)
    4 |     // for{}
vlib/v/checker/tests/noreturn_with_return.vv:6:2: error: [noreturn] functions should end with a call to another [noreturn] function, or with an infinite `for {}` loop
    4 |     // for{}
    5 |     // exit(0)
    6 |     return
      |     ~~~~~~
    7 | }
    8 |
vlib/v/checker/tests/noreturn_with_return.vv:18:2: error: unreachable code after a [noreturn] call
   16 |     eprintln('start')
   17 |     abc()
   18 |     eprintln('done')
      |     ~~~~~~~~~~~~~~~~
   19 | }
